<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="5"
        android:title="@string/about_us"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_help_black"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="2"
        android:title="@string/order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_shopping_cart"/>
    <item
        android:id="@+id/action_order_status"
        android:orderInCategory="4"
        android:title="@string/order_status"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_black" />
    <item
        android:id="@+id/action_call"
        android:orderInCategory="1"
        android:title="@string/call"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_local_phone_black"/>
    <item
        android:id="@+id/action_location"
        android:orderInCategory="3"
        android:title="@string/location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_location_on_black" />
</menu>
