<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_deserts"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_choose_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_desert"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_intro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/burger"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/text_choose_desert"
        android:src="@drawable/burger"
        android:onClick="showBurgerMessage"
        android:contentDescription="@string/burger_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_burger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/burger_desc"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/text_choose_desert"
        app:layout_constraintLeft_toRightOf="@id/burger"
        app:layout_constraintBottom_toBottomOf="@id/burger" />
    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/burger"
        android:src="@drawable/ice_cream"
        android:onClick="showIceCreamMessage"
        android:contentDescription="@string/ice_cream_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_ice_cream"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream_desc"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/burger"
        app:layout_constraintLeft_toRightOf="@id/ice_cream"
        app:layout_constraintBottom_toBottomOf="@id/ice_cream" />
    <ImageView
        android:id="@+id/pizza"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        android:src="@drawable/pizza"
        android:onClick="showPizzaMessage"
        android:contentDescription="@string/pizza_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_pizza"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pizza_desc"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/ice_cream"
        app:layout_constraintLeft_toRightOf="@id/pizza"
        app:layout_constraintBottom_toBottomOf="@id/pizza" />




</androidx.constraintlayout.widget.ConstraintLayout>
